k8s/05-search.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search
  namespace: ecommerce
spec:
  replicas: 2
  selector: { matchLabels: { app: search } }
  template:
    metadata:
      labels: { app: search }
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "5000"
    spec:
      containers:
        - name: search
          image: alihafor/ecommerce-search:latest
          ports: [{ containerPort: 5000 }]
          resources:
            requests: { cpu: "100m", memory: "128Mi" }
            limits: { cpu: "300m", memory: "256Mi" }
          readinessProbe: { httpGet: { path: /health, port: 5000 }, initialDelaySeconds: 5 }
          livenessProbe: { httpGet: { path: /health, port: 5000 }, initialDelaySeconds: 10 }
---
apiVersion: v1
kind: Service
metadata:
  name: search
  namespace: ecommerce
spec:
  selector: { app: search }
  ports: [{ port: 5000, targetPort: 5000 }]
