k8s/06-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: ecommerce
spec:
  replicas: 1
  selector: { matchLabels: { app: web } }
  template:
    metadata:
      labels: { app: web }
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
    spec:
      containers:
        - name: web
          image: ECR_REGISTRY/ecommerce-devops-web:IMAGE_TAG
          ports: [{ containerPort: 8080 }]
          resources:
            requests: { cpu: "100m", memory: "128Mi" }
            limits: { cpu: "300m", memory: "256Mi" }
          readinessProbe: { httpGet: { path: /health, port: 8080 }, initialDelaySeconds: 5 }
          livenessProbe: { httpGet: { path: /health, port: 8080 }, initialDelaySeconds: 10 }
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: ecommerce
spec:
  selector: { app: web }
  ports: [{ port: 8080, targetPort: 8080 }]
